k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plexdash
  labels:
    app.kubernetes.io/name: plexdash
